[project]
name = "epentry"
version = "0.1.0"
description = "A tool to compute the rate of entry of radicals into particles."
readme = "README.md"

requires-python = ">=3.14"

dependencies = ["matplotlib>=3.11.0", "numba>=0.65.1", "numpy>=2.4.6"]

[dependency-groups]
dev = ["ipykernel>=7.3.0", "pytest>=9.1.1"]
