[project]
name = "epentry"
version = "0.1.0"
description = "A tool to compute the rate of entry of radicals into particles."
readme = "README.md"

requires-python = ">=3.14"

dependencies = [
    "matplotlib>=3.11.0",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pyvista[jupyter]>=0.48.4",
    "scipy>=1.18.0",
    "trame>=3.13.2",
]

[dependency-groups]
dev = ["ipykernel>=7.3.0", "pytest>=9.1.1", "ruff>=0.15.18"]

[tool.ruff]
line-length = 90
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "D", "NPY201"]
ignore = ["D100", "D104", "D205", "E502", "F403", "UP032"]
unfixable = ["F401"]
pydocstyle = { convention = 'numpy' }

[tool.ruff.format]
line-ending = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
